--- a/src/styles-components/page-body-components/page-types/first-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/first-level-page-main-menu.css
@@ -4,22 +4,24 @@
         font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
     }
     100%{
-      font-variation-settings: "MONO" 0, "CASL" 1, "slnt" -15, "CRSV" 0;
+        font-variation-settings: "MONO" 0, "CASL" 1, "slnt" -15, "CRSV" 0;
     }
 }
 
 .f-l-title{
     text-align: right;
-    padding-right: 10%;
+    padding-right: 20%;
     font-size: 3vw;
-    font-weight: 300;
+    font-weight: 200;
     color: var(--bb-logo-color);
     animation: fLtitleAnim 6s 1 forwards;
-    font-variation-settings: "MONO" 0, "CASL" 1, "slnt" 0, "CRSV" 0;
-    letter-spacing: 3px;
+    /* font-variation-settings: "MONO" 0, "CASL" 1, "slnt" 0, "CRSV" 0; */
+    letter-spacing: 5px;
+    text-transform: uppercase;
 }
 
 .f-l-subTitle{
+    padding-left: 9%;
     font-weight: 400;
     margin-bottom: 10px;
     margin-top: 5px;
@@ -28,21 +30,31 @@
 }
 
 .f-l-mainContent{
-    columns: 2;
-    column-gap: 1%;
-    line-height: 110%;
-   
+    font-size: 1.1vw;
+    padding-right: 15%;
+    font-weight: 300;
+    /* column-count: 2; */
+    padding-left: 9%;
+    /* grid-column-gap: 3vw; */
+    /* grid-column-gap: 3vw; */
+    /* column-gap: 3vw; */
+    font-family: 'Poppins', sans-serif;
+    padding-bottom: 2vw;
 }
 
+.f-l-gallery{
+    padding-left: 9%;
 
+}
 
 
 
 .f-l-footer{
-
+    padding-left: 9%;
+    
 }
 
 .f-l-page{
-
-
-}
+    
+    margin-bottom: 2vw;
+    }
