--- a/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
@@ -1,12 +1,14 @@
 
 .s-l-title{
-margin-left: 1vw;
+padding-left: 1vw;
 font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
 font-weight: 370;
 margin-bottom: 10px;
 font-size: 1.3vw;
 text-transform: uppercase;
 letter-spacing: 3px;
+border-bottom: solid 1px var(--bb-logo-color);
+
 
 }
 
@@ -21,6 +23,7 @@ letter-spacing: 3px;
 .s-l-mainContent{
     font-size: 1.1vw;
     padding-right: 18%;
+    padding-left: 2%;
     font-weight: 300;
     column-count: 2;
     grid-column-gap: 3vw;
@@ -35,8 +38,8 @@ letter-spacing: 3px;
 
 .s-l-page{
     border-left: 1px solid var(--bb-logo-color);
-    padding-left: 2%;
-    border-top: solid 1px var(--bb-logo-color);
+    /*padding-left: 2%;*/
+/*    border-top: solid 1px var(--bb-logo-color);*/
     margin-bottom: 3vw;
 }
 
