--- a/src/styles-components/page-body-components/page-types/first-page.css
+++ b/src/styles-components/page-body-components/page-types/first-page.css
@@ -10,16 +10,20 @@
     /* animation: example 4s 1 forwards;
     animation-timing-function: ease-out; */
     color: var(--bb-logo-color);
-    line-height: 8vh;
+    line-height: 10.1vh;
     font-size: 4vw;
-    font-weight: 200;
+    font-weight: 210;
     position: absolute;
     text-align: right;
-    top: 10%;
-    right: 3%;
+    top: 6%;
+    right: 2%;
     z-index: 10;
-    text-transform: uppercase;
-    
+    text-transform: uppercase;   
+    letter-spacing: 2px; 
+}
+
+.fondoOp{
+  background-color: rgba(0, 150, 240, 0.10);
 }
 
 @keyframes example {
@@ -38,13 +42,15 @@
 
   #video-prima-pagina{
     width: 100%;
-    height: 500px ;
+    height: 510px ;
     position: relative;
-    right: 2%;
-    padding-left: 10px;
+    right: 6.5%;
+    /*padding-left: 2%;*/
   }
 
 
  
-
+.someBold{
+  font-weight: 400;
+}
  
