--- a/src/styles-components/page-body-components/page-types/first-page.css
+++ b/src/styles-components/page-body-components/page-types/first-page.css
@@ -53,4 +53,12 @@
 .someBold{
   font-weight: 400;
 }
+
+#trasformiamo-idee-prodotti{
+  position: absolute;
+  right: 20px;
+    width: 561px;
+    top: 58px;
+    opacity: 0.8;
+}
  
