--- a/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
@@ -3,12 +3,12 @@
 padding-left: 1vw;
 font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
 font-weight: 370;
-margin-bottom: 10px;
+/* margin-bottom: 10px; */
 font-size: 1.3vw;
 text-transform: uppercase;
 letter-spacing: 3px;
 border-bottom: solid 1px var(--bb-logo-color);
-
+margin-bottom: 0px;
 
 }
 
@@ -21,6 +21,7 @@ border-bottom: solid 1px var(--bb-logo-color);
 }
 
 .s-l-mainContent{
+    padding-top: 10px;
     font-size: 1.1vw;
     padding-right: 18%;
     padding-left: 2%;
@@ -29,6 +30,7 @@ border-bottom: solid 1px var(--bb-logo-color);
     grid-column-gap: 3vw;
     column-gap: 3vw;
     font-family: 'Poppins', sans-serif;
+    border-left: 1px solid var(--bb-logo-color);
 }
 
 
@@ -37,7 +39,6 @@ border-bottom: solid 1px var(--bb-logo-color);
 } */
 
 .s-l-page{
-    border-left: 1px solid var(--bb-logo-color);
     /*padding-left: 2%;*/
 /*    border-top: solid 1px var(--bb-logo-color);*/
     margin-bottom: 3vw;
