--- a/src/styles-components/page-body-components/page-types/footer-menu-derived-page.css
+++ b/src/styles-components/page-body-components/page-types/footer-menu-derived-page.css
@@ -22,10 +22,10 @@
 }
 
 .f-d-p-main-content ul{
-    margin-left: 1vw;
-    width: 50%;
-    margin-left: 4vw;
+    width: 80%;
+    /*margin-left: 1vw;*/
     border: solid 1px var(--bb-logo-color);
+    padding-left: 10%;
 }
 
 .f-d-p-main-content h2{
@@ -41,4 +41,9 @@
 }
 
 .footer-derived-page{
+}
+
+.f-d-p-main-content #general-contact
+{
+    /*qui lo stile per solo i contatti generali*/
 }
