--- a/src/styles-components/page-body-components/page-types/first-page.css
+++ b/src/styles-components/page-body-components/page-types/first-page.css
@@ -1,25 +1,25 @@
 
 .first-page{
-    display: flex;
-    align-items: center;
-    min-height: 100%;
+  display: flex;
+  align-items: center;
+  min-height: 100%;
 }
 
 .first-page h1{
-    /* font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0; */
-    /* animation: example 4s 1 forwards;
-    animation-timing-function: ease-out; */
-    color: var(--bb-logo-color);
-    line-height: 10.1vh;
-    font-size: 4vw;
-    font-weight: 210;
-    position: absolute;
-    text-align: right;
-    top: 6%;
-    right: 2%;
-    z-index: 10;
-    text-transform: uppercase;   
-    letter-spacing: 2px; 
+  /* font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0; */
+  /* animation: example 4s 1 forwards;
+  animation-timing-function: ease-out; */
+  color: var(--bb-logo-color);
+  line-height: 10.1vh;
+  font-size: 4vw;
+  font-weight: 210;
+  position: absolute;
+  text-align: right;
+  top: 6%;
+  right: 2%;
+  z-index: 10;
+  text-transform: uppercase;   
+  letter-spacing: 2px; 
 }
 
 .first-page strong{
@@ -33,20 +33,25 @@
     /* color:#7bd481; */
     color: rgba(0, 0, 255, 0);
     letter-spacing: 1px;
-    }
-    
-    100%{
-      color: var(--bb-logo-color); 
-      letter-spacing: 8px;
-      
-    }
   }
   
+  100%{
+    color: var(--bb-logo-color); 
+    letter-spacing: 8px;
+    
+  }
+}
+
+#first-page-video-container{
+  width: 80%;
+  height: 500px;
+  overflow: hidden;
+}
   #video-prima-pagina{
-    width: 100%;
-    height: 510px ;
     position: relative;
-    right: 6.5%;
+    top: 3px;
+    left: -6px;
+    width: 104%;
     /*padding-left: 2%;*/
   }
   
@@ -54,16 +59,16 @@
   /* .fondoOp{
     background-color: rgba(0, 150, 240, 0.10);
   } 
-
-.someBold{
-  font-weight: 400;
-}
+  
+  .someBold{
+    font-weight: 400;
+  }
+  */
 
 #trasformiamo-idee-prodotti{
   position: absolute;
   right: 20px;
     width: 561px;
     top: 58px;
-    opacity: 0.8;
+    opacity: 0.84;
 }
-  */
