26-08-2020 working on-> fixed first page slogan wisth issues

--- a/src/styles-components/page-body-components/page-types/first-page.css
+++ b/src/styles-components/page-body-components/page-types/first-page.css
@@ -68,7 +68,7 @@
 #trasformiamo-idee-prodotti{
   position: absolute;
   right: 20px;
-    width: 561px;
+    width: 50%;
     top: 58px;
     opacity: 0.84;
 }
