27-08-2020, added videos and images load managment

--- a/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
@@ -32,7 +32,13 @@ margin-bottom: 0px;
     column-gap: 3vw;
     font-family: 'Poppins', sans-serif;
     border-left: 1px solid var(--bb-logo-color);
+    display: flex;
 
+}
+
+.s-l-mainContent span{
+    vertical-align: text-top;   
+    width: 50%;
 }
 
 
