--- a/src/styles-components/footer-components/footer.css
+++ b/src/styles-components/footer-components/footer.css
@@ -1,8 +1,5 @@
 .footer{
     border-top: var(--bb-border-top-style);
-    /* display: flex; */
-    /* justify-content: center; */
-    text-align: center;
     padding-top: 15px;
     position: fixed;
     background: url(../../images/background.svg);
@@ -15,3 +12,6 @@
     padding-top: 2px;
 }
 
+a{
+    color: black;
+}
