--- a/src/styles-components/page-body-components/page-types/footer-menu-derived-page.css
+++ b/src/styles-components/page-body-components/page-types/footer-menu-derived-page.css
@@ -51,6 +51,10 @@
 
     display: flex;
     justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    /*margin-top: 10px;
+    margin-bottom: 10px;*/
 
 }
 .f-d-p-main-content #general-contact span {
