--- a/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
@@ -1,54 +1,60 @@
 
 .s-l-title{
-padding-left: 1vw;
-font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
-font-weight: 370;
-/* margin-bottom: 10px; */
-font-size: 1.3vw;
-text-transform: uppercase;
-letter-spacing: 3px;
-border-bottom: solid 1px var(--bb-logo-color);
-border-left: 1px solid var(--bb-logo-color);
-margin-bottom: 0px;
-
-}
-
-.s-l-subTitle{
-    font-weight: 400;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    font-variation-settings: "MONO" 0, "CASL" 0.4, "slnt" -15, "CRSV" 1;
-    padding-right: 17%;
-}
-
-.s-l-mainContent{
-    padding-top: 10px;
-    font-size: 1.1vw;
-    padding-right: 18%;
-    padding-left: 2%;
-    font-weight: 300;
-    column-count: 2;
-    grid-column-gap: 3vw;
-    column-gap: 3vw;
-    font-family: 'Poppins', sans-serif;
+    padding-left: 1vw;
+    font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0;
+    font-weight: 370;
+    /* margin-bottom: 10px; */
+    font-size: 1.3vw;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    border-bottom: solid 1px var(--bb-logo-color);
     border-left: 1px solid var(--bb-logo-color);
-
-}
-
-
-.s-l-footer{
-    /*text-align: justify;*/
-    margin: 10% 20% 1% 20%;
-    padding-right: 18%;
-
-
-}
-
-.s-l-page{
-    /*padding-left: 2%;*/
-/*    border-top: solid 1px var(--bb-logo-color);*/
-    margin-bottom: 3.5vw;
-}
-
-/* #la-nostra-storia-media{
-} */
+    margin-bottom: 0px;
+    
+    }
+    
+    .s-l-subTitle{
+        font-weight: 400;
+        margin-bottom: 10px;
+        margin-top: 5px;
+        font-variation-settings: "MONO" 0, "CASL" 0.4, "slnt" -15, "CRSV" 1;
+        padding-right: 17%;
+    }
+    
+    .s-l-mainContent{
+        padding-top: 10px;
+        font-size: 1.1vw;
+        padding-right: 18%;
+        padding-left: 2%;
+        font-weight: 300;
+        column-count: 2;
+        grid-column-gap: 3vw;
+        column-gap: 3vw;
+        font-family: 'Poppins', sans-serif;
+        border-left: 1px solid var(--bb-logo-color);
+        display: flex;
+    
+    }
+    
+    .s-l-mainContent span{
+        vertical-align: text-top;   
+        width: 50%;
+    }
+    
+    
+    .s-l-footer{
+        /*text-align: justify;*/
+        margin: 10% 20% 1% 20%;
+        padding-right: 18%;
+    
+    
+    }
+    
+    .s-l-page{
+        /*padding-left: 2%;*/
+    /*    border-top: solid 1px var(--bb-logo-color);*/
+        margin-bottom: 3vw;
+    }
+    
+    /* #la-nostra-storia-media{
+    } */
