27-08-2020, inserito sistema a span anche nelle pagine di terzo livello, esempio di funzionamento con la pagina campionatura(lang-pack-ita)

--- a/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
@@ -20,6 +20,8 @@
     margin-right: 8%;
     border-top: solid 1px var(--bb-logo-color);
     padding-top: 8px;
+    display: flex;
+    justify-content: space-between;
 }
 
 /* .t-l-footer{
