--- a/src/styles-components/page-body-components/page-types/first-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/first-level-page-main-menu.css
@@ -10,7 +10,7 @@
 
 .f-l-title{
     text-align: right;
-    padding-right: 20%;
+    padding-right: 2vw;
     font-size: 3vw;
     font-weight: 200;
     color: var(--bb-logo-color);
