--- a/src/styles-components/page-body-components/main-container.css
+++ b/src/styles-components/page-body-components/main-container.css
@@ -2,7 +2,7 @@
     /* width: 65%; */
     /* overflow-y: scroll; */
     overflow-x: hidden;
-    padding-left: 20px;
+    padding-left: 2vw;
     scrollbar-color: var(--bb-logo-color) white;
     scrollbar-width: thin;
     position: fixed;
@@ -10,8 +10,11 @@
     left: 22%;
     right: 2%;
     bottom: 2%;
+    
     padding-bottom: 80px;
-    padding-right: 10px;
+    padding-right: 2vw;
+
+    letter-spacing: 0.02em;
 }
 
 .main-container::-webkit-scrollbar {
@@ -46,7 +49,7 @@
   
   
 strong {
-    font-weight: 600;
+    font-weight: 500;
     /*   
     animation: strongAnim 1200ms 1 forwards;
     font-variation-settings: "MONO" 0, "CASL" 0, "slnt" 0, "CRSV" 0; */
