--- a/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/second-level-page-main-menu.css
@@ -41,6 +41,8 @@
     .s-l-mainContent span{
         vertical-align: text-top;   
         width: 50%;
+        margin-left: 0.8%;
+        margin-right: 0.8%;
     }
     
     
