--- a/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
@@ -15,13 +15,19 @@
 
 .t-l-mainContent{
     margin-left: 3vw;
-    font-size: 1vw;
+    font-size: 0.95vw;
     line-height: 20px;
     margin-right: 8%;
     border-top: solid 1px var(--bb-logo-color);
     padding-top: 8px;
     display: flex;
     justify-content: space-between;
+    text-align: right;
+    /*hyphens: auto;*/
+    letter-spacing: 0.02em;
+    line-height: 1.4em;
+    font-weight: 300;
+
 }
 
 /* .t-l-footer{
@@ -30,14 +36,15 @@
 
 .t-l-page{
     margin-bottom: 3vw;
-    width: 70%;
-    margin-left: 10%;
+    width: 85%;
+    margin-left: 4%;
 
 }
 
 .t-l-mainContent span{
-    vertical-align: text-top;   
-    width: 50%;
-    margin-left: 0.4%;
-    margin-right: 0.4%;
+    vertical-align: text-top;
+    width: 22em;   
+    /*width: 48.5%;*/
+    /*margin-left: 0.8%;
+    margin-right: 0.8%;*/
 }
