--- a/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
@@ -1,11 +1,13 @@
 
 .t-l-title{
-    margin-left: 4vw;
+    margin-left: 3vw;
     font-variation-settings: "MONO" 0, "CASL" 0.4, "slnt" -15, "CRSV" 1;
     font-weight: 300;
     font-size: 1.3vw;
     margin-bottom: 4px;
     text-transform: uppercase;
+    letter-spacing: 0.1em;
+
     
 }
 
@@ -27,6 +29,7 @@
     letter-spacing: 0.02em;
     line-height: 1.4em;
     font-weight: 300;
+    margin-bottom: 4em;
 
 }
 
@@ -45,6 +48,12 @@
     vertical-align: text-top;
     width: 22em;   
     /*width: 48.5%;*/
-    /*margin-left: 0.8%;
-    margin-right: 0.8%;*/
+    margin-left: 1.6%;
+    /*margin-right: 0.8%;*/
 }
+
+.t-l-mainContent span video{
+    width: 140%;
+    margin-left: -42%;
+}
+
