--- a/src/styles-components/page-body-components/menu-container.css
+++ b/src/styles-components/page-body-components/menu-container.css
@@ -8,9 +8,19 @@
     left: 1px;
     top: 10%;
     bottom: 1%;
-
+    background-color: rgba(59, 104, 104, 0);
+    
 }
 
-#menu-icon-mobile{
-    width:20px;
+
+@media screen and (max-width: 750px) {
+    #menu-container{
+        border-right: hidden ;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: static;
+    }
+
 }
