--- a/src/styles-components/mobile-menu.css
+++ b/src/styles-components/mobile-menu.css
@@ -5,9 +5,9 @@
     text-align: center;
 }
 #mobile-menu #icon{
-    width: 5%;
+    width: 20px;
     border-radius: 40%;
-    padding: 3%;
+    padding: 10px;
     border: solid 1px var(--bb-logo-color);
     background-color: rgba(255, 255, 255, 0.651);
 }
