--- a/src/styles-components/footer-components/voce-footer-menu.css
+++ b/src/styles-components/footer-components/voce-footer-menu.css
@@ -22,3 +22,16 @@
     font-weight: 100;
     font-size: 20px;
 }
+
+@media screen and (max-width: 750px) {
+    .voce-footer-menu{
+        margin-left: 10px;
+        margin-right: 10px;
+        font-size: 7px;
+        font-weight: 600;
+        position: relative;
+        top: -3px;
+        cursor: pointer;
+    }
+
+}
