--- a/src/styles-components/mobile-components/mobile-menu-container.css
+++ b/src/styles-components/mobile-components/mobile-menu-container.css
@@ -1,33 +1,12 @@
 #mobile-menu-container{
-    border-bottom: solid 1px var(--bb-logo-color);
-    border-left: solid 1px var(--bb-logo-color);
-    border-top: solid 1px var(--bb-logo-color);
-    background-color: rgba(255, 255, 255, 0.74);
+
+    border: solid 1px var(--bb-logo-color);
+    background-color: rgb(255, 255, 255);
     margin: 10%;
     position: fixed;
-    top: 10%;
-    bottom: 5%;
+    max-height: 70%;
+    bottom: 15%;
     width: 80%;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
-    scrollbar-color: var(--bb-logo-color) white;
-    scrollbar-width: thin;
-}
-
-#mobile-menu-container::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-}
-
-#mobile-menu-container::-webkit-scrollbar-track {
-    background: var(--bb-logo-color);        /* color of the tracking area */
-    border: solid 5.5px white;
-}
-
-#mobile-menu-container::-webkit-scrollbar-thumb {
-    background-color: white;    /* color of the scroll thumb */
-    /* border-radius: 100%; */       /* roundness of the scroll thumb */
-    height: 0px;
-    position: relative;
-    right: 4px;
-    border: var(--bb-border-top-style);  /* creates padding around scroll thumb */
 }
