--- a/src/styles-components/mobile-menu.css
+++ b/src/styles-components/mobile-menu.css
@@ -9,7 +9,7 @@
     border-radius: 40%;
     padding: 10px;
     border: solid 1px var(--bb-logo-color);
-    background-color: rgba(255, 255, 255, 0.651);
+    background-color: rgb(255, 255, 255);
 }
 #mobile-menu #icon-container{
 }
