--- a/src/styles-components/page-body-components/voce-menu.css
+++ b/src/styles-components/page-body-components/voce-menu.css
@@ -65,3 +65,19 @@
     font-size: 80%;
     padding-right: 15%;
 }
+@media screen and (max-width: 750px) {
+    .voce-menu-text{
+        width: fit-content;
+        font-size: 20px;
+        padding-right: 15%;
+    }
+    .voce-menu-container .voce-menu-text{
+        font-size: 15px;
+        padding-right: 10%;
+    }
+    .voce-menu-container .voce-menu-container .voce-menu-text{
+        font-size: 13px;
+        padding-right: 15%;
+    }
+
+}
