--- a/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
+++ b/src/styles-components/page-body-components/page-types/third-level-page-main-menu.css
@@ -57,3 +57,65 @@
     margin-left: -42%;
 }
 
+@media screen and (max-width: 750px) {
+    
+    .t-l-title{
+        margin-left: 3vw;
+        font-variation-settings: "MONO" 0, "CASL" 0.4, "slnt" -15, "CRSV" 1;
+        font-weight: 300;
+        font-size: 3.3vw;
+        margin-bottom: 4px;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+    
+        
+    }
+    
+    /* .t-l-subTitle{
+    
+    } */
+    
+    .t-l-mainContent{
+        margin-left: 3vw;
+        font-size: 3vw;
+        line-height: 20px;
+        margin-right: 8%;
+        border-top: solid 1px var(--bb-logo-color);
+        padding-top: 8px;
+        display: flex;
+        justify-content: space-between;
+        text-align: right;
+        /*hyphens: auto;*/
+        letter-spacing: 0.02em;
+        line-height: 1.4em;
+        font-weight: 300;
+        margin-bottom: 4em;
+        flex-direction: column;
+    
+    }
+    
+    /* .t-l-footer{
+    
+    } */
+    
+    .t-l-page{
+        margin-bottom: 3vw;
+        width: 85%;
+        margin-left: 15%;
+    
+    }
+    
+    .t-l-mainContent span{
+        vertical-align: text-top;
+        width: 22em;   
+        /*width: 48.5%;*/
+        margin-left: 1.6%;
+        /*margin-right: 0.8%;*/
+    }
+    
+    .t-l-mainContent span video{
+        width: 100%;
+        margin-left: -42%;
+    }
+
+}
