--- a/src/styles-components/page-body-components/main-container.css
+++ b/src/styles-components/page-body-components/main-container.css
@@ -56,7 +56,26 @@ strong {
   }
 
 
-
+  @media screen and (max-width: 750px) {
+    .main-container{
+        /* width: 65%; */
+        /* overflow-y: scroll; */
+        overflow-x: hidden;
+        padding-left: 2vw;
+        scrollbar-color: var(--bb-logo-color) white;
+        scrollbar-width: thin;
+        position: fixed;
+        top:12%;
+        left: 2%;
+        right: 2%;
+        bottom: 2%;
+        
+        padding-bottom: 80px;
+        padding-right: 2vw;
+    
+        letter-spacing: 0.02em;
+    }
+  }
 
 
 
