--- a/src/styles-components/mobile-components/mobile-menu-container.css
+++ b/src/styles-components/mobile-components/mobile-menu-container.css
@@ -4,8 +4,8 @@
     background-color: rgb(255, 255, 255);
     position: fixed;
     height: fit-content;
-    left: 10%;
-    top: 100%;
+    bottom: 10%;
+    right: 100%;
     width: 80%;
     overflow-y: hidden;
     overflow-x: hidden;
