--- a/src/styles-components/footer-components/footer.css
+++ b/src/styles-components/footer-components/footer.css
@@ -3,6 +3,9 @@
     padding-top: 15px;
     position: fixed;
     background: url(../../images/background.svg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-size: cover;
     bottom: 1px;
     width: 100%;
     height: 6%;
